# Sales_Prediction-MLOPS

./: .gitignore  LICENSE  README.md  dvc.yaml  freeze_requirements.txt  init_setup.sh  pyproject.toml  requirements.txt  requirements_dev.txt  scores.json  setup.cfg  setup.py
.dvc/: config
client/: Dockerfile  app.py  model.pkl  preprocessed.pkl  requirements.txt
configs/: config.yaml  params.yaml  schema.yaml
notebook/: trials.ipynb
src/salesPrediction/components/: __init__.py  data_ingestion.py  data_preprocessing.py  data_validation.py  model_predict.py  model_training.py
src/salesPrediction/config/: __init__.py  configuration.py
src/salesPrediction/constants/: __init__.py
src/salesPrediction/entity/: __init__.py  config_entity.py
src/salesPrediction/exception/: __init__.py
src/salesPrediction/logger/: __init__.py
src/salesPrediction/pipeline/: s01_data_ingestion.py  s02_data_validation.py  s03_data_preprocessing.py  s04_model_training.py  s05_model_predict.py
src/salesPrediction/utils/: __init__.py  common.py
tests/unit/: test_utils.py
