#? https://towardsdatascience.com/setuptools-python-571e7d5500f2
#? https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
[metadata]
license = MIT
license_files = LICENSE
classifier = 
  Programming Language :: Python :: 3.8
  Operating System :: OS Independent

[options]
#install_requires = 
# required libraries
#  ensure==1.0.2
python_requires = >=3.8 
# https://stackoverflow.com/questions/44660448/using-python-requires-to-require-python-2-7-or-3-2

#[options.extras_require]
#testing=
# testing libraries
#  pytest>=7.1.3
#  mypy>=0.971
#  flake8>=5.0.4
#  tox>=3.25.1
#  black>=22.8.0

#[options.package_data]
#salesPrediction = py.typed #! ignore errors in internal packages

#? https://sbarnea.com/lint/black/  black and flake8 + pre-commit
#[flake8]
#max-line-length = 120
#exclude = __init__.py