#? https://towardsdatascience.com/setuptools-python-571e7d5500f2
#? https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
[metadata]
license = MIT
license_files = LICENSE
classifier = 
  Programming Language :: Python :: 3.8
  Operating System :: OS Independent

[options]
python_requires = >=3.8 